@@ -83,6 +83,18 @@ name|DEFAULT_MERGE_FACTOR
 init|=
 literal|10
 decl_stmt|;
+comment|/** Default maximum segment size.  A segment of this size    *  or larger will never be merged.  @see setMaxMergeDocs */
+DECL|field|DEFAULT_MAX_MERGE_DOCS
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_MAX_MERGE_DOCS
+init|=
+name|Integer
+operator|.
+name|MAX_VALUE
+decl_stmt|;
 DECL|field|mergeFactor
 specifier|private
 name|int
@@ -97,6 +109,12 @@ decl_stmt|;
 DECL|field|maxMergeSize
 name|long
 name|maxMergeSize
+decl_stmt|;
+DECL|field|maxMergeDocs
+name|int
+name|maxMergeDocs
+init|=
+name|DEFAULT_MAX_MERGE_DOCS
 decl_stmt|;
 DECL|field|useCompoundFile
 specifier|private
@@ -698,6 +716,37 @@ decl_stmt|;
 comment|// Refuse to import a segment that's too large
 if|if
 condition|(
+name|info
+operator|.
+name|docCount
+operator|>
+name|maxMergeDocs
+operator|&&
+name|info
+operator|.
+name|dir
+operator|!=
+name|directory
+condition|)
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Segment is too large ("
+operator|+
+name|info
+operator|.
+name|docCount
+operator|+
+literal|" docs vs max docs "
+operator|+
+name|maxMergeDocs
+operator|+
+literal|")"
+argument_list|)
+throw|;
+if|if
+condition|(
 name|size
 operator|>=
 name|maxMergeSize
@@ -968,20 +1017,36 @@ condition|;
 name|i
 operator|++
 control|)
-name|anyTooLarge
-operator||=
-name|size
-argument_list|(
+block|{
+specifier|final
+name|SegmentInfo
+name|info
+init|=
 name|infos
 operator|.
 name|info
 argument_list|(
 name|i
 argument_list|)
+decl_stmt|;
+name|anyTooLarge
+operator||=
+operator|(
+name|size
+argument_list|(
+name|info
 argument_list|)
 operator|>=
 name|maxMergeSize
+operator|||
+name|info
+operator|.
+name|docCount
+operator|>=
+name|maxMergeDocs
+operator|)
 expr_stmt|;
+block|}
 if|if
 condition|(
 operator|!
@@ -1041,6 +1106,34 @@ expr_stmt|;
 block|}
 return|return
 name|spec
+return|;
+block|}
+comment|/** Sets the maximum docs for a segment to be merged.    *  When a segment has this many docs or more it will never be    *  merged. */
+DECL|method|setMaxMergeDocs
+specifier|public
+name|void
+name|setMaxMergeDocs
+parameter_list|(
+name|int
+name|maxMergeDocs
+parameter_list|)
+block|{
+name|this
+operator|.
+name|maxMergeDocs
+operator|=
+name|maxMergeDocs
+expr_stmt|;
+block|}
+comment|/** Get the maximum docs for a segment to be merged.    *  @see #setMaxMergeDocs */
+DECL|method|getMaxMergeDocs
+specifier|public
+name|int
+name|getMaxMergeDocs
+parameter_list|()
+block|{
+return|return
+name|maxMergeDocs
 return|;
 block|}
 block|}
