@@ -9113,6 +9113,226 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|// Just intercepts all merges& verifies that we are never
+comment|// merging a segment with>= 20 (maxMergeDocs) docs
+DECL|class|MyMergeScheduler
+specifier|private
+class|class
+name|MyMergeScheduler
+implements|implements
+name|MergeScheduler
+block|{
+DECL|method|merge
+specifier|synchronized
+specifier|public
+name|void
+name|merge
+parameter_list|(
+name|IndexWriter
+name|writer
+parameter_list|)
+throws|throws
+name|CorruptIndexException
+throws|,
+name|IOException
+block|{
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+name|MergePolicy
+operator|.
+name|OneMerge
+name|merge
+init|=
+name|writer
+operator|.
+name|getNextMerge
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|merge
+operator|==
+literal|null
+condition|)
+break|break;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|merge
+operator|.
+name|segments
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+assert|assert
+name|merge
+operator|.
+name|segments
+operator|.
+name|info
+argument_list|(
+name|i
+argument_list|)
+operator|.
+name|docCount
+operator|<
+literal|20
+assert|;
+name|writer
+operator|.
+name|merge
+argument_list|(
+name|merge
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|method|close
+specifier|public
+name|void
+name|close
+parameter_list|()
+block|{}
+block|}
+comment|// LUCENE-1013
+DECL|method|testSetMaxMergeDocs
+specifier|public
+name|void
+name|testSetMaxMergeDocs
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|MockRAMDirectory
+name|dir
+init|=
+operator|new
+name|MockRAMDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|StandardAnalyzer
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|iw
+operator|.
+name|setMergeScheduler
+argument_list|(
+operator|new
+name|MyMergeScheduler
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|setMaxMergeDocs
+argument_list|(
+literal|20
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|setMaxBufferedDocs
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|setMergeFactor
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+name|Document
+name|document
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|document
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"tvtest"
+argument_list|,
+literal|"a b c"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|TOKENIZED
+argument_list|,
+name|Field
+operator|.
+name|TermVector
+operator|.
+name|YES
+argument_list|)
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|177
+condition|;
+name|i
+operator|++
+control|)
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|document
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
